--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "dependencies": {
     "@angular/common": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@awesome-cordova-plugins/geolocation": "^5.37.3",
     "@awesome-cordova-plugins/http": "^5.37.3",
+    "@awesome-cordova-plugins/native-storage": "^5.37.3",
+    "@ionic-native/geolocation": "^5.0.0-beta.14",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage-angular": "^3.0.6",
+    "firebase": "^9.6.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -31,7 +37,7 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.1",
+    "@angular/cli": "13.0.4",
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
@@ -45,8 +51,10 @@
     "cordova-plugin-advanced-http": "^3.2.2",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -79,7 +87,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
-      }
+      },
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
